IVYPORTAL-19607 Integrate Developer Demos for Statistics
- Refactor